crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_wrong_signal.stderr
error[E0308]: mismatched types
  --> tests/ui/page/fail/controlled_bind_wrong_signal.rs:8:10
   |
 8 | |             bind: wrong,
   |                   ^^^^^ expected `Signal<String>`, found `Signal<bool>`
   |
   = note: expected struct `reinhardt_pages::Signal<std::string::String>`
              found struct `reinhardt_pages::Signal<bool>`
